--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "connect-favicons": "git://github.com/theworkers/connect-favicons.git",
     "eventproxy": "^0.3.4",
     "express": "^4.14.0",
+    "iconv-lite": "^0.4.13",
     "superagent": "^2.1.0"
   },
   "name": "jv",
